--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ nav {
   display: flex;
   justify-content: baseline;
   align-items: center;
-  margin-top: 150px;
+  margin-top: 30px;
 }
 .contact-info__left-side {
   background-color: white;
@@ -137,20 +137,58 @@ nav {
 .contact-info__right-side form .testForm {
   color: whitesmoke;
   background: #092748;
-  padding: 20px;
+  padding: 20px 50px;
   border: none;
 }
 
 .info-box {
+  position: relative;
   border-bottom: 1px solid grey;
-  width: 60%;
-  margin: 50px;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin-top: 25px;
 }
-.info-box__icon {
-  position: absolute;
-}
-.info-box h4 {
+
+h4 {
   text-transform: uppercase;
+}
+
+.icon-right {
+  position: absolute;
+  color: #e4a13e;
+  margin: 25px 15px;
+}
+
+.icon-left {
+  position: absolute;
+  top: 25%;
+  font-size: 20px;
+  left: 20px;
+  color: #092748;
+}
+
+.form-btn {
+  padding: 10px 50px;
+  border: none;
+  background-color: #e4a13e;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: "Oswald";
+  text-transform: uppercase;
+  font-size: 20px;
+}
+
+.head {
+  width: 30%;
+  margin-top: 150px;
+  text-align: center;
+  border-bottom: #e4a13e 1px solid;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .img {
