--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: baseline;
     align-items: center;
-    margin-top: 150px;
+    margin-top: 30px;
 
     &__left-side {
         background-color: white;
@@ -21,7 +21,7 @@
             .testForm {
                 color: whitesmoke;
                 background: #092748;
-                padding: 20px;
+                padding: 20px 50px;
                 border: none;
             }
         }
@@ -29,15 +29,51 @@
 }
 
 .info-box {
+    position: relative;
     border-bottom: 1px solid grey;
-    width: 60%;
-    margin: 50px;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 25px;
+}
 
-    &__icon {
-        position: absolute;
-    }
+h4 {
+    text-transform: uppercase;
+}
 
-    h4 {
-        text-transform: uppercase;
-    }
+.icon-right{
+    position: absolute;
+    color: #e4a13e;
+    margin: 25px 15px;
+}
+
+.icon-left {
+    position: absolute;
+    top: 25%;
+    font-size: 20px;
+    left: 20px;
+    color: #092748;
+}
+
+.form-btn{
+    padding: 10px 50px;
+    border: none;
+    background-color: #e4a13e;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: "Oswald";
+    text-transform: uppercase;
+    font-size: 20px;
+}
+
+.head{
+    width: 30%;
+    margin-top: 150px;
+    text-align: center;
+    border-bottom: #e4a13e 1px solid;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
