--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -8,6 +8,7 @@ nav {
 .navbar {
     background-color: #e6e6e6;
     height: 130px;
+    z-index: 1; 
 
     &__left-container {
         position: absolute;
