--- a/sass/pages/_team.scss
+++ b/sass/pages/_team.scss
@@ -37,6 +37,7 @@
     position: relative;
     bottom: 130px;
     width: 250px;
+    height: 450px;
     background-color: #e6e6e6;
     border-bottom-left-radius: 50px;
     border-bottom-right-radius: 50px;
@@ -60,6 +61,7 @@ p {
     margin: 10px 0px;
     font-style: italic;
 }
+
 .presentation-txt{
     margin: 0;
 }
