--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,9 +6,10 @@
 @import "./base/typography"; 
 
 @import "./components/buttons";
+@import "./components/encart-service";
+@import "./components/head-title";
 
-@import "./layout/container";
-@import "./layout/header"; 
+@import "./layout/container"; 
 @import "./layout/nav";
 @import "./layout/forms";
 @import "./layout/footer";
