--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -9,6 +9,7 @@
     justify-content: center;
     width: 350px;
     height: 65px;
+    border-radius: 10px;
     background-color: #e4a13e;
     font-family: "Oswald";
     font-size: 18px;
@@ -25,4 +26,22 @@
 
 
 //btn jaune
+
+.form-btn {
+    padding: 10px 50px;
+    border: none;
+    background-color: #e4a13e;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: "Oswald";
+    text-transform: uppercase;
+    font-size: 20px;
+    border-radius: 10px;
+    color: white;
+    box-shadow: 5px 5px 10px black;
+    &:focus{
+        outline: 0;
+    }
+}
 
