--- a/sass/components/_encart-service.scss
+++ b/sass/components/_encart-service.scss
@@ -1,5 +1,4 @@
-.encart{
-
+.encart {
     &__service-box {
         background-color: #e4a13e;
         width: 250px;
@@ -10,9 +9,10 @@
         justify-content: space-around;
         align-items: center;
         padding: 30px;
+        border-radius: 20px;
     }
-
-    &__icon-service-box{
+    
+    &__icon-service-box {
         font-size: 70px;
         color: #0e193e;
     }
@@ -21,6 +21,5 @@
         font-family: "Oswald";
         text-transform: uppercase;
         font-weight: 400;
-
     }
 }
