--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -11,24 +11,47 @@
 
     &__container-box {
         display: flex;
-        align-items: baseline;
+        align-items: flex-start;
         justify-content: space-around;
     }
 
     &__title{
         font-size: 30px;
         font-weight: 400;
+        
+        &--adress{
+            font-size: 30px ;
+        }
+
+        &--socialmedia{
+            font-size: 20px;
+        }
     }
 
-    &__box {
-    }
-
-    ul{
+    ul {
         font-size: 18px;
+        padding: 0;
     }
 }
 
 .rs--light{
     font-size: 30px;
-    color: white;
+    color: #0e193e;
+    position: absolute;
+    top: 10px;
+    left: 12px;
+}
+
+.footer__btn{
+    padding: 8px 20px;
+    font-size: 17px;
+}
+
+.background-rs{
+    position: relative;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    background-color: white;
+    box-shadow: 10px 5px 5px black;
 }
