--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -16,6 +16,7 @@
     &__right-side {
         width: 100%;
         background-color: #0e193e;
+        border-radius: 20px;
         form {
             padding: 70px;
             .testForm {
@@ -23,6 +24,7 @@
                 background: #092748;
                 padding: 20px 50px;
                 border: none;
+                border-radius: 10px;
             }
         }
     }
@@ -54,18 +56,6 @@ h4 {
     font-size: 20px;
     left: 20px;
     color: #092748;
-}
-
-.form-btn {
-    padding: 10px 50px;
-    border: none;
-    background-color: #e4a13e;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: "Oswald";
-    text-transform: uppercase;
-    font-size: 20px;
 }
 
 
