--- a/sass/pages/_team.scss
+++ b/sass/pages/_team.scss
@@ -3,7 +3,7 @@
     margin-bottom: 30px;
 
     &__title {
-        @include title-section(#0e193e);
+        @include title-section($blue);
     }
 }
 
@@ -22,7 +22,7 @@
     width: 250px;
     height: 250px;
     border-radius: 50%;
-    background: #0e193e;
+    background: $blue;
     z-index: 1;
 
 }
@@ -38,7 +38,7 @@
     bottom: 130px;
     width: 250px;
     height: 450px;
-    background-color: #e6e6e6;
+    background-color: $grey;
     border-bottom-left-radius: 50px;
     border-bottom-right-radius: 50px;
     text-align: center;
