--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,12 @@
 body {
   margin: 0;
+  min-width: 1280px;
+  margin: auto;
+}
+
+a {
+  text-decoration: none !important;
+  color: white !important;
 }
 
 li {
@@ -46,8 +53,9 @@ body {
   text-transform: uppercase;
   font-size: 20px;
   border-radius: 10px;
-  color: white;
-  box-shadow: 5px 5px 10px black;
+  color: black;
+  font-weight: 500;
+  box-shadow: 3px 5px 10px black;
 }
 .form-btn:focus {
   outline: 0;
@@ -55,14 +63,14 @@ body {
 
 .encart__service-box {
   background-color: #e4a13e;
-  width: 250px;
-  height: 250px;
+  width: 300px;
+  height: 350px;
   color: white;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   align-items: center;
-  padding: 30px;
+  justify-content: space-evenly;
+  padding: 25px;
   border-radius: 20px;
 }
 .encart__icon-service-box {
@@ -72,7 +80,23 @@ body {
 .encart__title-box {
   font-family: "Oswald";
   text-transform: uppercase;
+  font-weight: 500;
+  text-align: center;
+  font-size: 20px;
+  width: 55%;
+}
+.encart__description-box {
+  color: #0e193e;
+  font-size: 15px;
   font-weight: 400;
+  text-align: center;
+  width: 80%;
+}
+.encart__link-box {
+  font-family: "Oswald";
+  font-weight: 600;
+  font-size: 20px;
+  color: #0e193e !important;
 }
 
 .head {
@@ -189,7 +213,7 @@ nav {
   font-size: 30px;
 }
 .footer__title--socialmedia {
-  font-size: 20px;
+  font-size: 18px;
 }
 .footer ul {
   font-size: 18px;
@@ -215,7 +239,15 @@ nav {
   height: 50px;
   border-radius: 50px;
   background-color: white;
-  box-shadow: 10px 5px 5px black;
+  box-shadow: 5px 5px 5px black;
+}
+
+.box-about {
+  border-bottom: 1px solid #e6e6e6;
+}
+.box-about__title {
+  font-family: "Oswald";
+  font-size: 20px;
 }
 
 .container {
@@ -273,7 +305,7 @@ h4 {
   top: 25%;
   font-size: 20px;
   left: 20px;
-  color: #092748;
+  color: #0e193e;
 }
 
 .img {
@@ -285,7 +317,7 @@ h4 {
 .section {
   padding: 1rem 0;
 }
-.section--background-grey {
+.section--background-blue {
   background-color: #0e193e;
 }
 .section--background-white {
@@ -312,39 +344,82 @@ h4 {
 }
 .section__partner {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
   width: 80%;
   margin: auto;
+  height: 400px;
 }
 .section__logoPartner {
-  width: 20%;
-  height: 20%;
+  object-fit: contain;
+  width: 50%;
+}
+
+.testTemoignage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.testParolePartenaire {
+  width: 45%;
+  margin-top: 20px;
+  font-style: italic;
+  font-weight: 300;
+  font-size: 18px;
+  text-align: justify;
+}
+
+.services-section {
+  display: flex;
+  justify-content: space-between;
 }
 
 .box-services {
-  background-color: #e6e6e6;
-  display: flex;
-  margin: 50px auto;
-  width: 70%;
-}
-
-.encart__service-box {
-  width: 200px;
-  height: 200px;
-}
-.encart__service-box .flip-2-ver-right-2 {
-  -webkit-animation: flip-2-ver-right-2 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
-  animation: flip-2-ver-right-2 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
-}
-
-.encart__title-box {
-  font-size: 15px;
-}
-
-.services-description {
+  background: #e6e6e6;
   padding: 30px;
+  text-align: center;
+  border-radius: 20px;
+  width: 30%;
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+}
+.box-services__title {
+  font-family: "Oswald";
+  text-transform: uppercase;
+  font-size: 20px;
+  margin-top: 15px;
+  color: white;
+}
+.box-services__icon {
+  color: #e4a13e;
+  font-size: 70px;
+}
+.box-services__description {
+  width: 80%;
+  margin: 10px auto;
   text-align: justify;
+  color: white;
+  padding: 30px;
+}
+
+.Prout {
+  height: 500px;
+  padding: 30px;
+  margin: 30px;
+  width: 80%;
+  background-color: #0e193e;
+  margin: auto;
+  border-radius: 20px;
+}
+
+.diagonal-box {
+  border-bottom: 1px solid #e4a13e;
+  transform: skewY(5deg);
+}
+
+.content {
+  max-width: 50em;
+  margin: 0 auto;
+  transform: skewY(-5deg);
 }
 
 .head {
