--- a/sass/components/_encart-service.scss
+++ b/sass/components/_encart-service.scss
@@ -1,25 +1,43 @@
 .encart {
     &__service-box {
-        background-color: #e4a13e;
-        width: 250px;
-        height: 250px;
+        background-color: $yellow;
+        width: 300px;
+        height: 350px;
         color: white;
         display: flex;
         flex-direction: column;
-        justify-content: space-around;
         align-items: center;
-        padding: 30px;
+        justify-content: space-evenly;
+        padding: 25px;
         border-radius: 20px;
     }
-    
+
     &__icon-service-box {
         font-size: 70px;
-        color: #0e193e;
+        color: $blue;
     }
 
     &__title-box {
         font-family: "Oswald";
         text-transform: uppercase;
+        font-weight: 500;
+        text-align: center;
+        font-size: 20px; 
+        width: 55%;
+    }
+
+    &__description-box {
+        color: $blue;
+        font-size: 15px;
         font-weight: 400;
+        text-align: center;
+        width: 80%;
+    }
+
+    &__link-box{
+        font-family: 'Oswald';
+        font-weight: 600;
+        font-size: 20px;
+        color: $blue!important;
     }
 }
