--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -15,7 +15,7 @@
 
     &__right-side {
         width: 100%;
-        background-color: #0e193e;
+        background-color: $blue;
         border-radius: 20px;
         form {
             padding: 70px;
@@ -46,7 +46,7 @@ h4 {
 
 .icon-right {
     position: absolute;
-    color: #e4a13e;
+    color: $yellow;
     margin: 25px 15px;
 }
 
@@ -55,7 +55,7 @@ h4 {
     top: 25%;
     font-size: 20px;
     left: 20px;
-    color: #092748;
+    color: $blue;
 }
 
 
