--- a/sass/components/_encart-service.scss
+++ b/sass/components/_encart-service.scss
@@ -10,6 +10,7 @@
         justify-content: space-evenly;
         padding: 25px;
         border-radius: 20px;
+        box-shadow: 1px 16px 10px #c5c5c5;
     }
 
     &__icon-service-box {
