--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -7,13 +7,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 350px;
-    height: 65px;
-    border-radius: 10px;
+    border-radius: 30px;
     background-color: $yellow;
-    font-family: "Oswald";
+    font-family: "Nunito Sans";
     font-size: 18px;
-    padding: 20px;
+    padding: 5px 15px;
     margin: 70px auto;
     a {
         text-decoration: none;
