--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -6,53 +6,23 @@ nav {
 }
 
 .navbar {
-    background-color: #e6e6e6;
-    height: 130px;
-    z-index: 1000000; 
-
-    &__left-container {
-        position: absolute;
-        left: 0;
-        width: 40%;
-        height: 100%;
-        background-color: #e6e6e6;
-    }
-
-    &__left-info {
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        margin: 10px;
-
-        #logo-vault-tec {
-            width: 100px;
-            height: 100px;
-        }
-
-        #slogan {
-            font-family: "Nunito Sans";
-            font-weight: 800;
-            font-size: 18px;
-            text-align: center;
-            margin-top: 40px;
-        }
-    }
+    position: relative;
+    margin-top: 50px;
+    z-index: 1000000;
 
     &__right-container {
-        position: absolute;
-        right: 0;
-        width: 60%;
+        width: 100%;
         height: 100%;
-        clip-path: polygon(9% 0, 100% 0%, 111% 100%, 0% 100%);
-        background-color: #0e193e;
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
     }
 
     &__navbar-nav {
         display: flex;
-        width: 85%;
-        margin-top: 54px;
-        margin-left: 120px;
-        justify-content: space-around;
+        width: 60%;
+        justify-content: space-evenly;
     }
 
     &__nav-link {
@@ -61,7 +31,9 @@ nav {
         font-weight: 900;
         color: white;
         display: block;
-        padding: .5rem 1rem;
+        padding: 0.5rem 1rem;
+        font-size: 16px;
+        letter-spacing: 2px;
 
         &:hover {
             text-decoration: none;
