--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -5,7 +5,11 @@
 }
 
 .section {
-    padding: 1rem 0;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
 
     &--background-blue {
         background-color: #0e193e;
@@ -22,23 +26,37 @@
         }
     }
 
+    &__description {
+        text-align: center;
+        width: 30%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__btn {
+        display: flex;
+    }
+
     &__container-box {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-evenly;
         margin: 40px;
+        background-color: #fbfbfb;
     }
 
     &__partner {
         display: flex;
+        align-items: center;
+        justify-content: space-evenly;
         width: 80%;
         margin: auto;
-        height: 400px;
+        height: 300px;
     }
 
     &__logoPartner {
         object-fit: contain;
-        width: 50%;
+        width: 20%;
     }
 }
 
@@ -47,13 +65,101 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    background-color: $blue;
+    color: white;
+    width: 20%;
+    border-radius: 30px;
+    box-shadow: 0px 12px 10px #c5c5c5;
 }
 
 .testParolePartenaire {
-    width: 45%;
     margin-top: 20px;
     font-style: italic;
     font-weight: 300;
     font-size: 18px;
-    text-align: justify;
+    text-align: center;
+    height: 130px;
+    padding: 30px;
+}
+
+.icon-plus {
+    margin-left: 5px;
+    background-color: $grey;
+    padding: 5px 6px;
+    border-radius: 30px;
+    font-size: 15px;
+}
+
+.presentation {
+    position: absolute;
+    top: 450px;
+    left: 250px;
+    color: $grey;
+    font-size: 30px;
+    font-weight: 400;
+
+    &__title {
+        text-transform: uppercase;
+        font-family: "Oswald";
+        font-size: 70px;
+    }
+}
+
+.logo {
+    position: absolute;
+    z-index: 1;
+    width: 100px;
+    left: 150px;
+    top: 20px;
+}
+
+.background-img {
+    filter: brightness(0.5);
+    width: 100%;
+}
+
+.img-section-about-us {
+    width: 30%;
+    background-color: #e6e6e6;
+    border-radius: 50%;
+    padding: 60px;
+    box-shadow: 15px 6px 37px #c5c5c5;
+}
+
+.section-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section__partner-temoignage {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 50px;
+}
+
+.qui {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: $grey;
+    width: 100%;
+    border-bottom-left-radius: 27px;
+    border-bottom-right-radius: 27px;
+    padding: 20px;
+    text-align: center;
+    color: $blue;
+}
+
+.futur-photo {
+    width: 50px;
+    height: 50px;
+    background-color: $blue;
+    border-radius: 50%;
+    color: white;
+}
+
+section {
+    margin: 200px;
 }
